# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  p.py  test.cpp
cgi-bin/: add_comment.py  add_image.py  autoindex.py  functions.py  home.py  login.py  logout.py  profile.py  publish.py  published1.py  redirect_home.py  rm_post.py  serv.py  show_all1.py  signup.py  signup1.py  web.db
config/: default.conf
error_pages/: 403.html
hdrs/: Config.hpp  ConfigParams.hpp  Request.hpp  Response.hpp  Server.hpp  SimpSocket.hpp  Utils.hpp
srcs/: Config.cpp  Request.cpp  Response.cpp  Server.cpp  SimpSocket.cpp  Utils.cpp  main.cpp
